Chore: instll all dependencies

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This project demonstrates how to build an AI-driven e-commerce chat assistant that can handle customer queries and take autonomous, multi-step actions in real time.",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node index.ts",
+    "seed": "ts-node seed-db.ts"
   },
   "keywords": [
     "chat",
@@ -21,11 +21,18 @@
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@types/cors": "^2.8.19",
+    "typescript": "^5.9.2",
+    "@types/express": "^5.0.3"
   },
   "dependencies": {
+    "@langchain/anthropic": "^0.3.26",
+    "@langchain/core": "^0.3.72",
+    "@langchain/langgraph-checkpoint-mongodb": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.18.0",
+    "zod": "^3.25.76"
   }
 }
