--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "seed": "npx ts-node src/seed-database.ts"
+    "seed": "npx ts-node src/seed/seed-database.ts"
   },
   "keywords": [
     "e-commerce",
@@ -19,10 +19,14 @@
   "author": "Mar-Issah",
   "license": "MIT",
   "dependencies": {
+    "@langchain/core": "^0.3.72",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.6.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.18.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
