--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "@langchain/core": "^0.3.72",
+    "@langchain/langgraph": "^0.4.8",
+    "@langchain/langgraph-checkpoint-mongodb": "^0.1.1",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.6.9",
     "cors": "^2.8.5",
