--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "e-commerce_chat_be",
   "version": "1.0.0",
   "description": "This project demonstrates how to build an AI-driven e-commerce chat assistant that can handle customer queries and take autonomous, multi-step actions in real time.",
-  "main": "dist/server.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "seed": "npx ts-node src/seed/seed-database.ts"
   },
   "keywords": [
